--- a/src/app/components/button-with-icon/button-with-icon.component.html
+++ b/src/app/components/button-with-icon/button-with-icon.component.html
@@ -1,3 +1,3 @@
-<div class="button-with-icon_container">
+<div [ngClass]="{'button-with-icon_container':true,'primary': primary,'active': active}" (click)="onClick.emit()">
   <ng-content></ng-content>
 </div>
