--- a/src/app/components/table/table-row/table-row.component.html
+++ b/src/app/components/table/table-row/table-row.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'table_container__row' :true, 'header': header}">
+<div [ngClass]="{'table_container__row' :true, 'header': header, 'for-search': search, 'active':active}">
   <ng-content select="[slot=items]"></ng-content>
   <div class="table_container__actions">
 
