--- a/src/app/components/editable-field/editable-field.component.scss
+++ b/src/app/components/editable-field/editable-field.component.scss
@@ -11,6 +11,10 @@
   display: flex;
   color: #606580;
   background: none;
+
+  &.static{
+    opacity: 0;
+  }
   &.editable-access{
     border-bottom: 1px solid #606580;
     color: #D7E2F2;
@@ -18,5 +22,28 @@
   }
   &.select{
       background: url("../../../assets/icons/down.png") no-repeat right 10px center;
+  }
+}
+.static-field_container{
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid transparent;
+  padding-bottom: 4px;
+  background: transparent;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  display: flex;
+  color: #606580;
+  background: none;
+  position: absolute;
+  &.editable-access{
+    border-bottom: 1px solid #606580;
+    color: #D7E2F2;
+    cursor: auto;
+  }
+  &.select{
+    background: url("../../../assets/icons/down.png") no-repeat right 10px center;
   }
 }
