--- a/src/app/components/pagination/pagination-item/pagination-item.component.html
+++ b/src/app/components/pagination/pagination-item/pagination-item.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="{'pagination-item-container': true, 'active':active}">
+<div [ngClass]="{'pagination-item-container': true, 'active':active}" (click)="onClick.emit()">
   <ng-content></ng-content>
 </div>
