--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -16,6 +16,11 @@
     .button-with-icon_container{
       display: none;
     }
+    &.active{
+        .button-with-icon_container{
+          display: flex;
+        }
+    }
   }
 }
 
