--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,8 @@
   background: url("./assets/icons/search.png") no-repeat right 10px center;;
 
 }
+.toast-container {
+  top: auto !important;
+  bottom: 20px !important;
+}
+
